# opencart-mcp

./: .env.example  .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
nix/: package.nix
src/opencart_mcp/: __main__.py  config.py  db.py  server.py
