[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "opencart-mcp"
version = "0.3.0"
description = "MCP server for OpenCart — query products, orders, settings, and modules via Claude Code or any MCP client"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Chris Bray" },
]
readme = "README.md"
keywords = ["opencart", "mcp", "model-context-protocol", "ecommerce", "journal3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=2.0.0",
    "paramiko>=3.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/chrisbray85/opencart-mcp"
Repository = "https://github.com/chrisbray85/opencart-mcp"
Issues = "https://github.com/chrisbray85/opencart-mcp/issues"

[tool.setuptools.packages.find]
where = ["src"]
